--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "jotai": "^2.15.0",
     "next": "16.0.3",
     "next-intl": "^4.5.3",
     "react": "19.2.0",
